--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.43.2",
     "styled-components": "^5.3.1"
   },
   "scripts": {
