--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.23.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
