--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux-thunk": "^2.4.0",
     "styled-components": "^5.3.1"
   },
   "scripts": {
