--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^0.23.0",
-    "i": "^0.3.7",
+    "emailjs-com": "^3.2.0",
     "npm": "^8.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
