--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^0.23.0",
-    "i": "^0.3.7",
     "npm": "^8.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -16,8 +15,7 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "redux-thunk": "^2.4.0",
-    "sass": "^1.43.3",
-    "styled-components": "^5.3.1"
+    "sass": "^1.43.3"
   },
   "scripts": {
     "start": "react-scripts start",
