--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "redux-thunk": "^2.4.0",
+    "reselect": "^4.1.2",
     "sass": "^1.43.3",
     "styled-components": "^5.3.1"
   },
