--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "react-toastify": "^8.1.0",
     "redux-thunk": "^2.4.0",
     "sass": "^1.43.3",
