--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "npm": "^8.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-base64": "^1.0.3",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.20.4",
     "react-redux": "^7.2.5",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
