--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "redux-thunk": "^2.4.0",
     "reselect": "^4.1.2",
     "sass": "^1.43.3",
-    "styled-components": "^5.3.1"
+    "socket.io-client": "^4.4.0",
+    "styled-components": "^5.3.1",
+    "timeago.js": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
