--- a/package.json
+++ b/package.json
@@ -4,24 +4,28 @@
   "private": true,
   "dependencies": {
     "aos": "^2.3.4",
-    "axios": "^0.23.0",
+    "axios": "^0.24.0",
     "emailjs-com": "^3.2.0",
-    "npm": "^8.1.4",
+    "i18next": "^21.5.6",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
+    "npm": "^8.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.20.4",
-    "react-redux": "^7.2.5",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
+    "react-hook-form": "^7.21.0",
+    "react-i18next": "^11.14.3",
+    "react-redux": "^7.2.6",
+    "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "react-toastify": "^8.1.0",
-    "redux-thunk": "^2.4.0",
-    "reselect": "^4.1.2",
-    "sass": "^1.43.3",
-    "styled-components": "^5.3.1"
+    "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.5",
+    "sass": "^1.44.0",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,6 +51,6 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^6.0.1"
+    "node-sass": "^7.0.0"
   }
 }
