--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
     "sass": "^1.44.0",
-    "styled-components": "^5.3.3"
-    "timeago.js": "^4.0.2"
-    "socket.io-client": "^4.4.0",
+    "styled-components": "^5.3.3",
+    "timeago.js": "^4.0.2",
+    "socket.io-client": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
