--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "i18next": "^21.5.6",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
+    "moment": "^2.29.1",
     "npm": "^8.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
