--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
     "npm": "^8.2.0",
+    "passport-facebook": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
@@ -25,9 +26,9 @@
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
     "sass": "^1.44.0",
+    "socket.io-client": "^4.4.0",
     "styled-components": "^5.3.3",
-    "timeago.js": "^4.0.2",
-    "socket.io-client": "^4.4.0"
+    "timeago.js": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
