--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "emailjs-com": "^3.2.0",
     "npm": "^8.1.4",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-helmet": "^6.1.0",
